# gradient_descent_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-entrypoint.sh  docker-predict.sh  docker-train.sh
src/: lib.rs  main.rs  model.rs
