[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ndarray = "0.17.2"


[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
