[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"


[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
